fixed whitespace issue for chrome mobile iOS

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 body {
   margin: 0;
-  height: 100%;
+  max-height: 100%;
   overflow: auto;
   overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
